transition bg & animation

--- a/index.html
+++ b/index.html
@@ -88,7 +88,52 @@
         </div>
       </article>
 
-      <div class="div__transition"></div>
+      <!--       <div class="div__transition">
+        <div class="between"></div>
+        <div class="bg__color1"></div>
+        <div class="bg__color2"></div>
+      </div>
+      <div class="div__transition2">
+        <div class="blank"></div>
+        <div class="bg__color3"></div>
+        <div class="bg__color4"></div>
+      </div> -->
+
+      <div class="transition">
+        <div class="grid-item1"></div>
+        <div class="grid-item2"></div>
+        <div class="grid-item3"></div>
+        <div class="grid-item4"></div>
+        <div class="grid-item5"></div>
+        <div class="grid-item6"></div>
+        <div class="grid-item7"></div>
+        <div class="grid-item8"></div>
+        <div class="grid-item9"></div>
+        <div class="grid-item10"></div>
+        <div class="grid-item11"></div>
+        <div class="grid-item12"></div>
+      </div>
+
+      <div class="transition2">
+        <div class="grid2-item1"></div>
+        <div class="grid2-item2"></div>
+        <div class="grid2-item3"></div>
+        <div class="grid2-item4"></div>
+        <div class="grid2-item5"></div>
+        <div class="grid2-item6"></div>
+        <div class="grid2-item7"></div>
+        <div class="grid2-item8"></div>
+        <div class="grid2-item9"></div>
+        <div class="grid2-item10"></div>
+        <div class="grid2-item11"></div>
+        <div class="grid2-item12"></div>
+        <div class="grid2-item13"></div>
+        <div class="grid2-item14"></div>
+        <div class="grid2-item15"></div>
+        <div class="grid2-item16"></div>
+        <div class="grid2-item17"></div>
+        <div class="grid2-item18"></div>
+      </div>
 
       <article class="main__article">
         <div class="div__types">
@@ -118,7 +163,41 @@
         </section>
       </article>
 
-      <div class="div__transition"></div>
+      <div class="transition">
+        <div class="grid-item1"></div>
+        <div class="grid-item2"></div>
+        <div class="grid-item3"></div>
+        <div class="grid-item4"></div>
+        <div class="grid-item5"></div>
+        <div class="grid-item6"></div>
+        <div class="grid-item7"></div>
+        <div class="grid-item8"></div>
+        <div class="grid-item9"></div>
+        <div class="grid-item10"></div>
+        <div class="grid-item11"></div>
+        <div class="grid-item12"></div>
+      </div>
+
+      <div class="transition2">
+        <div class="grid2-item1"></div>
+        <div class="grid2-item2"></div>
+        <div class="grid2-item3"></div>
+        <div class="grid2-item4"></div>
+        <div class="grid2-item5"></div>
+        <div class="grid2-item6"></div>
+        <div class="grid2-item7"></div>
+        <div class="grid2-item8"></div>
+        <div class="grid2-item9"></div>
+        <div class="grid2-item10"></div>
+        <div class="grid2-item11"></div>
+        <div class="grid2-item12"></div>
+        <div class="grid2-item13"></div>
+        <div class="grid2-item14"></div>
+        <div class="grid2-item15"></div>
+        <div class="grid2-item16"></div>
+        <div class="grid2-item17"></div>
+        <div class="grid2-item18"></div>
+      </div>
 
       <article class="main__article" id="education">
         <section class="main__education">
@@ -149,7 +228,41 @@
         </div>
       </article>
 
-      <div class="div__transition"></div>
+      <div class="transition">
+        <div class="grid-item1"></div>
+        <div class="grid-item2"></div>
+        <div class="grid-item3"></div>
+        <div class="grid-item4"></div>
+        <div class="grid-item5"></div>
+        <div class="grid-item6"></div>
+        <div class="grid-item7"></div>
+        <div class="grid-item8"></div>
+        <div class="grid-item9"></div>
+        <div class="grid-item10"></div>
+        <div class="grid-item11"></div>
+        <div class="grid-item12"></div>
+      </div>
+
+      <div class="transition2">
+        <div class="grid2-item1"></div>
+        <div class="grid2-item2"></div>
+        <div class="grid2-item3"></div>
+        <div class="grid2-item4"></div>
+        <div class="grid2-item5"></div>
+        <div class="grid2-item6"></div>
+        <div class="grid2-item7"></div>
+        <div class="grid2-item8"></div>
+        <div class="grid2-item9"></div>
+        <div class="grid2-item10"></div>
+        <div class="grid2-item11"></div>
+        <div class="grid2-item12"></div>
+        <div class="grid2-item13"></div>
+        <div class="grid2-item14"></div>
+        <div class="grid2-item15"></div>
+        <div class="grid2-item16"></div>
+        <div class="grid2-item17"></div>
+        <div class="grid2-item18"></div>
+      </div>
 
       <article class="main__article" id="games">
         <div class="div__gaming">
@@ -184,7 +297,41 @@
         </section>
       </article>
 
-      <div class="div__transition"></div>
+      <div class="transition">
+        <div class="grid-item1"></div>
+        <div class="grid-item2"></div>
+        <div class="grid-item3"></div>
+        <div class="grid-item4"></div>
+        <div class="grid-item5"></div>
+        <div class="grid-item6"></div>
+        <div class="grid-item7"></div>
+        <div class="grid-item8"></div>
+        <div class="grid-item9"></div>
+        <div class="grid-item10"></div>
+        <div class="grid-item11"></div>
+        <div class="grid-item12"></div>
+      </div>
+
+      <div class="transition2">
+        <div class="grid2-item1"></div>
+        <div class="grid2-item2"></div>
+        <div class="grid2-item3"></div>
+        <div class="grid2-item4"></div>
+        <div class="grid2-item5"></div>
+        <div class="grid2-item6"></div>
+        <div class="grid2-item7"></div>
+        <div class="grid2-item8"></div>
+        <div class="grid2-item9"></div>
+        <div class="grid2-item10"></div>
+        <div class="grid2-item11"></div>
+        <div class="grid2-item12"></div>
+        <div class="grid2-item13"></div>
+        <div class="grid2-item14"></div>
+        <div class="grid2-item15"></div>
+        <div class="grid2-item16"></div>
+        <div class="grid2-item17"></div>
+        <div class="grid2-item18"></div>
+      </div>
 
       <article class="main__article" id="tours">
         <section class="main__tours">
@@ -241,7 +388,41 @@
         </div>
       </article>
 
-      <div class="div__transition"></div>
+      <div class="transition">
+        <div class="grid-item1"></div>
+        <div class="grid-item2"></div>
+        <div class="grid-item3"></div>
+        <div class="grid-item4"></div>
+        <div class="grid-item5"></div>
+        <div class="grid-item6"></div>
+        <div class="grid-item7"></div>
+        <div class="grid-item8"></div>
+        <div class="grid-item9"></div>
+        <div class="grid-item10"></div>
+        <div class="grid-item11"></div>
+        <div class="grid-item12"></div>
+      </div>
+
+      <div class="transition2">
+        <div class="grid2-item1"></div>
+        <div class="grid2-item2"></div>
+        <div class="grid2-item3"></div>
+        <div class="grid2-item4"></div>
+        <div class="grid2-item5"></div>
+        <div class="grid2-item6"></div>
+        <div class="grid2-item7"></div>
+        <div class="grid2-item8"></div>
+        <div class="grid2-item9"></div>
+        <div class="grid2-item10"></div>
+        <div class="grid2-item11"></div>
+        <div class="grid2-item12"></div>
+        <div class="grid2-item13"></div>
+        <div class="grid2-item14"></div>
+        <div class="grid2-item15"></div>
+        <div class="grid2-item16"></div>
+        <div class="grid2-item17"></div>
+        <div class="grid2-item18"></div>
+      </div>
 
       <article class="main__article" id="meeting">
         <div class="div__meeting">
@@ -288,7 +469,41 @@
         </section>
       </article>
 
-      <div class="div__transition"></div>
+      <div class="transition">
+        <div class="grid-item1"></div>
+        <div class="grid-item2"></div>
+        <div class="grid-item3"></div>
+        <div class="grid-item4"></div>
+        <div class="grid-item5"></div>
+        <div class="grid-item6"></div>
+        <div class="grid-item7"></div>
+        <div class="grid-item8"></div>
+        <div class="grid-item9"></div>
+        <div class="grid-item10"></div>
+        <div class="grid-item11"></div>
+        <div class="grid-item12"></div>
+      </div>
+
+      <div class="transition2">
+        <div class="grid2-item1"></div>
+        <div class="grid2-item2"></div>
+        <div class="grid2-item3"></div>
+        <div class="grid2-item4"></div>
+        <div class="grid2-item5"></div>
+        <div class="grid2-item6"></div>
+        <div class="grid2-item7"></div>
+        <div class="grid2-item8"></div>
+        <div class="grid2-item9"></div>
+        <div class="grid2-item10"></div>
+        <div class="grid2-item11"></div>
+        <div class="grid2-item12"></div>
+        <div class="grid2-item13"></div>
+        <div class="grid2-item14"></div>
+        <div class="grid2-item15"></div>
+        <div class="grid2-item16"></div>
+        <div class="grid2-item17"></div>
+        <div class="grid2-item18"></div>
+      </div>
 
       <article class="main__article main__article--last" id="future">
         <h2 class="main__h2">The Future of Virtual Reality</h2>
