--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           />
         </figure>
       </div>
-      <div class="search">search bar</div>
+      <div class="search">
+        <i class="fa-solid fa-magnifying-glass fa-flip-horizontal icon" style="color: #ffffff;"></i>search...
+      </div>
     </header>
 
     <main class="main">
@@ -87,17 +89,6 @@
           </figure>
         </div>
       </article>
-
-      <!--       <div class="div__transition">
-        <div class="between"></div>
-        <div class="bg__color1"></div>
-        <div class="bg__color2"></div>
-      </div>
-      <div class="div__transition2">
-        <div class="blank"></div>
-        <div class="bg__color3"></div>
-        <div class="bg__color4"></div>
-      </div> -->
 
       <div class="transition">
         <div class="grid-item1"></div>
