--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         </figure>
       </div>
       <div class="search">
-        <i class="fa-solid fa-magnifying-glass fa-flip-horizontal icon" style="color: #ffffff;"></i>search...
+        <i
+          class="fa-solid fa-magnifying-glass fa-flip-horizontal icon"
+          style="color: #ffffff"
+        ></i
+        >search...
       </div>
     </header>
 
@@ -551,7 +555,7 @@
     <footer class="footer">
       <p class="p--back"><a href="#">Back to top</a></p>
 
-      <section class="social">
+      <!-- <section class="social">
         <ul class="social-list">
           <li class="social-item">
             <a href="#" class="social-link">
@@ -587,7 +591,7 @@
             </a>
           </li>
         </ul>
-      </section>
+      </section> -->
     </footer>
   </body>
 </html>
