--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
               video calls.
             </p>
             <li>
-              <strong><h3>Enhanced Collaboration</h3></strong>
+              <strong><h3>Enhanced Booking Experience </h3></strong>
             </li>
             <p class="tours--p">
-              VR platforms offer tools like virtual whiteboards, document
-              sharing, and 3D modeling, allowing people to collaborate on
-              projects and share ideas instantly, no matter where they are.
+              Travel websites use VR to let users look around hotels, cruises,
+              and other options before they book, helping travelers choose
+              better.
             </p>
             <li>
               <strong><h3>Accessibility and Inclusivity</h3></strong>
@@ -367,12 +367,12 @@
               adjusting it to suit their preferences.
             </p>
             <li>
-              <strong><h3>Cost and Time Savings</h3></strong>
+              <strong><h3>Sustainability Efforts</h3></strong>
             </li>
             <p class="tours--p">
-              VR meetings save money and help the environment by avoiding
-              travel, hotels, and venue costs, while also letting people join
-              from anywhere, saving time and offering more flexibility.
+              VR helps the environment by offering virtual travel options,
+              reducing carbon emissions and saving natural resources compared to
+              physical travel.
             </p>
           </ul>
         </section>
